--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                       <li>
                         <div class="unit unit-spacing-xs">
                           <div class="unit-left"><span class="icon mdi mdi-map-marker"></span></div>
-                          <div class="unit-body"><a class="address" href="#">J-1402 Plumeria Garden Estate</a></div>
+                          <div class="unit-body"><a class="address" href="#">J-1402 Plumeria Garden Estate.</a></div>
                         </div>
                       </li>
                     </ul>
